<resources>
    <string name="app_name">EscapeHonbab</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="Title1" translatable="false">관심사를 입력하세요</string>
    <string name="Subtitle" translatable="false">관심사는 프로필 설정에서 언제든지 변경 가능합니다.</string>
    <string name="subject1" translatable="false">음식</string>
    <string name="subject1_1" translatable="false">한식</string>
    <string name="subject1_2" translatable="false">양식</string>
    <string name="subject1_3" translatable="false">중식</string>
    <string name="subject1_4" translatable="false">일식</string>
    <string name="subject1_5" translatable="false">아시아음식</string>
    <string name="subject1_6" translatable="false">디저트</string>
    <string name="subject1_7" translatable="false">술</string>
    <string name="subject1_8" translatable="false">비건</string>
    <string name="subject2" translatable="false">취미</string>
    <string name="subject2_1" translatable="false">헬스</string>
    <string name="subject2_2" translatable="false">독서</string>
    <string name="subject2_3" translatable="false">음악</string>
    <string name="subject2_4" translatable="false">영화</string>
    <string name="subject2_5" translatable="false">수영</string>
    <string name="subject2_6" translatable="false">자전거</string>
    <string name="subject2_7" translatable="false">테니스</string>
    <string name="subject2_8" translatable="false">축구</string>
    <string name="subject2_9" translatable="false">명상</string>
    <string name="subject2_10" translatable="false">공부</string>
    <string name="subject2_11" translatable="false">사진</string>
    <string name="subject2_13" translatable="false">골프</string>
    <string name="subject3" translatable="false">장소</string>
    <string name="subject3_1" translatable="false">한국</string>
    <string name="subject3_2" translatable="false">영국</string>
    <string name="subject3_3" translatable="false">프랑스</string>
    <string name="subject3_4" translatable="false">중국</string>
    <string name="subject3_5" translatable="false">일본</string>
    <string name="subject3_6" translatable="false">미국</string>
    <string name="subject3_7" translatable="false">호주</string>
    <string name="subject3_8" translatable="false">홍콩</string>
    <string name="finished" translatable="false">가입완료</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="back" translatable="false">가입하기</string>
    <string name="title">프렌즈 매칭</string>
    <string name="Matching">매칭 시작</string>
    <string name="explain1">아래 조건에 맞게 매칭을 시작합니다</string>
    <string name="sex">선호 성별</string>
    <string name="woman">여성</string>
    <string name="man">남성</string>
    <string name="setting">…</string>
    <string name="age">선호 나이</string>
    <string name="store">주변 맛집 보러가기</string>
    <string name="all">모두</string>
    <string name="mex">지금 이 시간, 혼밥탈출하기 딱 좋은 시간</string>
    <string name="age1">랜덤</string>
    <string name="age2">20-25세</string>
    <string name="age3">26-30세</string>
    <string name="age4">30세 이상</string>


</resources>