<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/interestList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backspace"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:scaleX="2"
            android:scaleY="1"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/InterestSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/Title1"
        android:textColor="@color/mainColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Plus_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:text="@string/Subtitle"
        android:textColor="#000000"
        android:textSize="13sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/subject1"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkHansik"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_1"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkYangsik"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_2"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkJunsik"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_3"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkIlsik"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_4"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkAsian"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_5"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkDessert"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_6"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkDrink"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_7"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkVeg"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject1_8"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/Hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/subject2"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkWorkout"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_1"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkReading"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_2"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkMusic"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_3"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_4"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkSwimming"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_5"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkBicycle"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_6"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkTennis"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_7"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkSoccer"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_8"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkMedi"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_9"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkStudy"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_10"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkPicture"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_11"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkGolf"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject2_13"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/Places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/subject3"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkKorea"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_1"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkBri"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_2"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkFra"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_3"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkChi"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_4"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkJap"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_5"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkAmer"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_6"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkAust"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_7"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />

                    <CheckBox
                        android:id="@+id/checkHonk"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/subject3_8"
                        android:textColor="#000000"
                        app:buttonTint="@color/mainColor" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="35dp"
                android:background="@drawable/button_background"
                android:insetLeft="0dp"
                android:text="@string/finished"
                app:backgroundTint="@color/mainColor" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>